# gel

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  config.cmake.in  configure.py  configured.cmake.in  test.m.cpp
conf/: .gitignore  depres.py  io_util.py  package.py
include/gel/: gelfloat.h  gelint.h  gellib.h
include/gel/containers/: imap.h  iset.h
include/gel/core/: itickable.h
include/gel/debug/: ilogger.h
include/gel/io/: istream.h
include/gel/math/: gelmath.h  mat.h  mat2x2.h  mat3x3.h  mat4x4.h  mat_math.h  precision.h  swizzle.h  vec.h  vec1.h  vec2.h  vec3.h  vec4.h  vec_math.h
include/gel/memory/: iallocator.h  imemory.h  pool_allocator.h
include/gel/time/: clock.h  time.h
src/gel/: debug.cpp  debug.h  gelfloat.cpp  gelint.cpp  gellib.cpp  log.cpp  log.h
src/gel/containers/: imap.cpp  iset.cpp
src/gel/core/: itickable.cpp
src/gel/debug/: ilogger.cpp
src/gel/io/: istream.cpp
src/gel/math/: gelmath.cpp  mat.cpp  mat2x2.cpp  mat3x3.cpp  mat4x4.cpp  mat_math.cpp  precision.cpp  swizzle.cpp  vec.cpp  vec1.cpp  vec2.cpp  vec3.cpp  vec4.cpp  vec_math.cpp
src/gel/memory/: iallocator.cpp  imemory.cpp  pool_allocator.cpp
src/gel/time/: clock.cpp  time.cpp
src/gel/util/: logger.cpp  logger.h
test/gel/math/: mat2x2.t.cpp  mat3x3.t.cpp  mat4x4.t.cpp  vec2.t.cpp  vec3.t.cpp  vec4.t.cpp
test/gel/time/: clock.t.cpp
